<resources>
    <string name="app_name">MP9</string>
    <string name="title_activity_action">Item</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_update_item">Update Item</string>
    <string name="title_activity_view_item">View Item</string>

    <string name="action_settings">Settings</string>

    <string name="msg_empty">You have no items :-(</string>
    <string name="msg_retry">No connection.</string>

    <string name="msg_warn_retry">Unable to save item.</string>

    <string name="lbl_item_id">Item ID</string>
    <string name="lbl_item_name">Name</string>
    <string name="lbl_item_desc">Description</string>
    <string name="lbl_item_price">Price</string>
    <string name="lbl_item_rating">Item Rating</string>

    <string name="lbl_retry">Retry</string>

    <string name="hint_id">Item ID</string>
    <string name="hint_name">Name</string>
    <string name="hint_desc">Description</string>
    <string name="hint_price">Price</string>

    <string name="action_add">Add</string>
    <string name="action_view">View</string>
    <string name="action_update">Update</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <string name="dialog_title_remove">Remove Item</string>
    <string name="dialog_msg_remove">This item will be removed. Remove item?</string>

    <string name="dialog_title_cancel">Cancel</string>
    <string name="dialog_msg_cancel">Item information will not be saved. Continue cancel?</string>

    <string name="snack_added">Item added.</string>
    <string name="snack_updated">Item updated.</string>
    <string name="snack_removed">Item removed.</string>

    <string name="progress_fetching">Fetching Items</string>
    <string name="progress_adding">Adding Item</string>
    <string name="progress_updating">Updating Item</string>
    <string name="progress_removing">Removing Item</string>
</resources>
